--- a/sysutils/rofi/Makefile
+++ b/sysutils/rofi/Makefile
@@ -1,12 +1,11 @@
-# $OpenBSD: Makefile,v 1.4 2015/09/20 18:37:50 jasper Exp $
+# $OpenBSD: Makefile,v 1.5 2015/11/18 19:56:40 jasper Exp $
 
 COMMENT =		window switcher, run dialog and dmenu replacement
 
 GH_PROJECT =		rofi
-GH_TAGNAME =		0.15.8
+GH_TAGNAME =		0.15.11
 GH_ACCOUNT =		DaveDavenPort
 DISTNAME =		${GH_PROJECT}-${GH_TAGNAME}
-REVISION =		0
 
 CATEGORIES =		sysutils x11
 HOMEPAGE =		https://davedavenport.github.io/rofi/
@@ -16,9 +15,12 @@ PERMIT_PACKAGE_CDROM =	Yes
 
 MODULES =		devel/gettext
 
-WANTLIB += X11 Xft Xinerama c fontconfig freetype glib-2.0 gobject-2.0
-WANTLIB += m pango-1.0 pangoft2-1.0 pangoxft-1.0 pthread
-WANTLIB += z
+WANTLIB += X11 Xext Xinerama c cairo glib-2.0 gobject-2.0 pango-1.0
+WANTLIB += pangocairo-1.0 pthread startup-notification-1
+
+BUILD_DEPENDS +=	x11/i3
+LIB_DEPENDS =		devel/pango \
+			devel/startup-notification
 
 AUTOCONF_VERSION =	2.69
 AUTOMAKE_VERSION =	1.12
@@ -27,9 +29,6 @@ BUILD_DEPENDS+=		${MODGNU_AUTOMAKE_DEPENDS} \
 
 CONFIGURE_STYLE =	gnu
 CONFIGURE_ENV =		CPPFLAGS=-I${LOCALBASE}/include
-
-BUILD_DEPENDS +=	x11/i3
-LIB_DEPENDS =		devel/pango
 
 TEST_TARGET =		test
 
