--- a/sysutils/rofi/Makefile
+++ b/sysutils/rofi/Makefile
@@ -1,14 +1,16 @@
-# $OpenBSD: Makefile,v 1.9 2016/01/03 19:40:11 jasper Exp $
+# $OpenBSD: Makefile,v 1.10 2016/01/03 19:44:25 jasper Exp $
 
 COMMENT =		window switcher, run dialog and dmenu replacement
 
 GH_PROJECT =		rofi
 GH_TAGNAME =		0.15.11
-REVISION =		2
+REVISION =		3
 GH_ACCOUNT =		DaveDavenPort
 
 CATEGORIES =		sysutils x11
 HOMEPAGE =		https://davedavenport.github.io/rofi/
+
+MAINTAINER =		Jasper Lievisse Adriaanse <jasper@openbsd.org>
 
 # MIT/X
 PERMIT_PACKAGE_CDROM =	Yes
