--- a/print/py-reportlab/Makefile
+++ b/print/py-reportlab/Makefile
@@ -1,7 +1,6 @@
-# $OpenBSD: Makefile,v 1.2 2010/02/01 17:00:14 espie Exp $
+# $OpenBSD: Makefile,v 1.3 2016/01/05 13:19:35 ajacoutot Exp $
 
      SUBDIR =
-     SUBDIR += plugins
      SUBDIR += reportlab
 
 .include <bsd.port.subdir.mk>
