--- a/x11/gnome/ocrfeeder/Makefile
+++ b/x11/gnome/ocrfeeder/Makefile
@@ -1,10 +1,10 @@
-# $OpenBSD: Makefile,v 1.8 2016/01/05 10:01:48 ajacoutot Exp $
+# $OpenBSD: Makefile,v 1.9 2016/01/05 13:24:05 ajacoutot Exp $
 
 COMMENT=		OCR and DAR program
 
 GNOME_PROJECT=		ocrfeeder
 GNOME_VERSION=		0.8.1
-REVISION=		1
+REVISION=		2
 
 CATEGORIES=		graphics textproc
 
@@ -20,7 +20,7 @@ MODPY_ADJ_FILES=	bin/ocrfeeder.in \
 BUILD_DEPENDS=		devel/py-gobject3 \
 			graphics/goocanvas2 \
 			graphics/py-sane \
-			print/py-reportlab/reportlab \
+			print/py-reportlab \
 			textproc/py-enchant \
 			x11/gtk+3
 
@@ -28,7 +28,7 @@ RUN_DEPENDS=		devel/iso-codes \
 			devel/py-gobject3 \
 			graphics/goocanvas2 \
 			graphics/py-sane \
-			print/py-reportlab/reportlab \
+			print/py-reportlab \
 			print/unpaper \
 			textproc/gtkspell3 \
 			textproc/py-enchant \
