--- a/security/nss/Makefile
+++ b/security/nss/Makefile
@@ -1,11 +1,12 @@
-# $OpenBSD: Makefile,v 1.56 2015/11/23 11:32:12 landry Exp $
+# $OpenBSD: Makefile,v 1.57 2016/01/06 18:41:42 ajacoutot Exp $
 
 SHARED_ONLY=		Yes
 
 COMMENT=		libraries to support development of security-enabled apps
 
 VERSION=		3.21
-DISTNAME =		nss-${VERSION}
+DISTNAME=		nss-${VERSION}
+REVISION=		0
 
 SO_VERSION=		39.0
 .for _lib in freebl3 nss3 nssckbi nssdbm3 nssutil3 smime3 softokn3 ssl3
@@ -14,8 +15,6 @@ SHARED_LIBS+=		${_lib} ${SO_VERSION}
 CATEGORIES=		security
 
 HOMEPAGE=		https://developer.mozilla.org/en-US/docs/Mozilla/Projects/NSS
-
-MAINTAINER=		Martynas Venckus <martynas@openbsd.org>
 
 # mozilla public license
 PERMIT_PACKAGE_CDROM=	Yes
