--- a/net/Makefile
+++ b/net/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.949 2016/01/06 15:51:53 ajacoutot Exp $
+# $OpenBSD: Makefile,v 1.950 2016/01/07 01:03:28 jeremy Exp $
 
      SUBDIR =
      SUBDIR += GeoIP
@@ -575,10 +575,12 @@
      SUBDIR += ruby-agcaldav
      SUBDIR += ruby-eventmachine,ruby21
      SUBDIR += ruby-eventmachine,ruby22
+     SUBDIR += ruby-eventmachine,ruby23
      SUBDIR += ruby-macaddr
      SUBDIR += ruby-mfi
      SUBDIR += ruby-msgpack,ruby21
      SUBDIR += ruby-msgpack,ruby22
+     SUBDIR += ruby-msgpack,ruby23
      SUBDIR += ruby-net-dns
      SUBDIR += ruby-net-http-digest_auth
      SUBDIR += ruby-net-scp
