- update to odt2txt-0.5 - moved to github

--- a/textproc/odt2txt/Makefile
+++ b/textproc/odt2txt/Makefile
@@ -1,17 +1,15 @@
-# $OpenBSD: Makefile,v 1.7 2016/01/16 19:35:31 jasper Exp $
+# $OpenBSD: Makefile,v 1.8 2016/01/16 19:37:12 jasper Exp $
 
 COMMENT=		convert OpenDocument Text to plain text
 
-DISTNAME=		odt2txt-0.4
-REVISION =		1
-CATEGORIES=		textproc
+GH_ACCOUNT =		dstosberg
+GH_PROJECT =		odt2txt
+GH_TAGNAME =		v0.5
 
-HOMEPAGE=		http://stosberg.net/odt2txt/
+CATEGORIES=		textproc
 
 # GPLv2
 PERMIT_PACKAGE_CDROM=	Yes
-
-MASTER_SITES=	${HOMEPAGE}
 
 MODULES=	converters/libiconv
 
