Chase Location: header redirects for googlecode-hosted HOMEPAGEs and bump REVISION.

--- a/net/py-ipaddr/Makefile
+++ b/net/py-ipaddr/Makefile
@@ -1,13 +1,14 @@
-# $OpenBSD: Makefile,v 1.1.1.1 2013/10/04 09:20:14 giovanni Exp $
+# $OpenBSD: Makefile,v 1.2 2016/01/26 13:05:27 sthen Exp $
 
 COMMENT =	Python IP address manipulation library
 
 MODPY_EGG_VERSION = 2.1.10
+REVISION =	0
 DISTNAME =	ipaddr-${MODPY_EGG_VERSION}
 PKGNAME =	py-${DISTNAME}
 CATEGORIES =	net
 
-HOMEPAGE =	http://code.google.com/p/ipaddr-py/
+HOMEPAGE =	https://github.com/google/ipaddr-py
 
 # Apache 2.0
 PERMIT_PACKAGE_CDROM =	Yes
