--- a/databases/py-apsw/Makefile
+++ b/databases/py-apsw/Makefile
@@ -1,18 +1,19 @@
-# $OpenBSD: Makefile,v 1.2 2014/06/03 11:32:18 rpointel Exp $
+# $OpenBSD: Makefile,v 1.3 2016/01/26 13:05:26 sthen Exp $
 
 SHARED_ONLY =	Yes
 
 COMMENT =	thin SQLite wrapper for Python
 
-REVISION = 0
 MODPY_EGG_VERSION = 3.8.0.2
+REVISION =	1
 DISTNAME =	apsw-${MODPY_EGG_VERSION}-r1
 EXTRACT_SUFX =	.zip
 PKGNAME =	py-apsw-${MODPY_EGG_VERSION}
 CATEGORIES =	databases
 
+HOMEPAGE=	https://github.com/rogerbinns/apsw
+
 MASTER_SITES =	https://apsw.googlecode.com/files/
-HOMEPAGE=	https://code.google.com/p/apsw/
 
 # zlib
 PERMIT_PACKAGE_CDROM=	Yes
