--- a/sysutils/binwalk/Makefile
+++ b/sysutils/binwalk/Makefile
@@ -1,15 +1,15 @@
-# $OpenBSD: Makefile,v 1.3 2014/08/20 00:29:15 sthen Exp $
+# $OpenBSD: Makefile,v 1.4 2016/01/26 13:05:27 sthen Exp $
 
 COMMENT=	tool for reverse-engineering and analysing firmware blobs
 
 MODPY_EGG_VERSION = 1.2.2_1
+REVISION=	1
 DISTNAME=	binwalk-1.2.2-1
 PKGNAME=	binwalk-1.2.2.1
-REVISION=	0
 
 CATEGORIES=	sysutils
 
-HOMEPAGE=	http://code.google.com/p/binwalk/
+HOMEPAGE=	https://github.com/devttys0/binwalk
 
 MAINTAINER=	Stuart Henderson <sthen@openbsd.org>
 
