Use a lovely perl oneliner to convert the coordinates to a proper GeoJSON file. openbsd-developers is now fully web 2.0 compliant!
Bump DISTNAME to 2.0 accordingly, next one who commits to it don't
forget to bump REVISION.

--- a/geo/openbsd-developers/Makefile
+++ b/geo/openbsd-developers/Makefile
@@ -1,10 +1,10 @@
-# $OpenBSD: Makefile,v 1.130 2016/02/27 16:13:54 landry Exp $
+# $OpenBSD: Makefile,v 1.131 2016/02/27 16:33:56 landry Exp $
 
 CATEGORIES=		geo
 COMMENT=		geographic location of past and present OpenBSD developers
 
-DISTNAME=		openbsd-developers-1.0
-REVISION=		125
+DISTNAME=		openbsd-developers-2.0
+REVISION=
 DISTFILES=
 HOMEPAGE=		http://www.openbsd.org/
 
@@ -14,6 +14,9 @@ NO_TEST=		Yes
 do-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/markers
 	${INSTALL_DATA} ${FILESDIR}/OpenBSD ${PREFIX}/share/markers
+	perl -p -e 'BEGIN { print "{ \"type\": \"FeatureCollection\",\"features\":[\n" } ; \
+		s/^#.*$$//; s/^([\d\-\.]+)\s+([\d\.\-]+)\s+"(\w+)"\s+# (.*)$$/{ "type": "Feature", "geometry" : {"type" : "Point", "coordinates": [\2, \1]}, "properties" : {"login": "\3@", "name": "\4"}},/; \
+			END { print "]}" }' ${FILESDIR}/OpenBSD > ${PREFIX}/share/markers/OpenBSD.geojson
 
 where-am-i:
 	@echo "$$(sysctl -n hw.sensors.nmea0.angle0 | cut -d' ' -f1)\t\t$$(sysctl -n hw.sensors.nmea0.angle1 | cut -d' ' -f1)\t\t\"$$(whoami)\"\\t\t#$$(finger $$(whoami) | head -1 | cut -d\: -f3-)"
