Remove audio/mpegaudio. The code is untouched since 1994, it barely works, and the code is apparently of very low quality.
ok jacoutot@, sthen@, jca@, testing from jca@

--- a/audio/Makefile
+++ b/audio/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.362 2016/01/12 20:45:01 landry Exp $
+# $OpenBSD: Makefile,v 1.363 2016/03/20 18:27:59 mmcc Exp $
 
      SUBDIR =
      SUBDIR += abcde
@@ -124,7 +124,6 @@
      SUBDIR += mpd
      SUBDIR += mpd-add-similar
      SUBDIR += mpdscribble
-     SUBDIR += mpegaudio
      SUBDIR += mpg123
      SUBDIR += mpg321
      SUBDIR += mscore
