--- a/devel/quirks/Makefile
+++ b/devel/quirks/Makefile
@@ -1,11 +1,11 @@
-# $OpenBSD: Makefile,v 1.367 2016/03/19 20:24:28 okan Exp $
+# $OpenBSD: Makefile,v 1.368 2016/03/20 18:27:59 mmcc Exp $
 
 COMMENT =	exceptions to pkg_add rules
 CATEGORIES =	devel databases
 DISTFILES =
 
 # API.rev
-PKGNAME =	quirks-2.212
+PKGNAME =	quirks-2.213
 PKG_ARCH =	*
 MAINTAINER =	Marc Espie <espie@openbsd.org>
 
